improve time support

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "bun test --preload ./tests/setup.js",
     "test-watch": "bun run test -- --watch",
-    "build": "esbuild --bundle --minify --format=esm builds/*.js --target=safari12.1,chrome63 --outdir=./dist/",
+    "build": "esbuild --bundle  --format=esm builds/*.js --target=safari12.1,chrome63 --outdir=./dist/",
     "build-meta": "esbuild --bundle --minify --format=esm builds/*.js --target=safari12.1,chrome63 --outdir=./dist/ --metafile=meta.json --analyze 2> ./docs/filesize.md",
     "start": "bun run build -- --servedir=.",
     "watch": "bun run build -- --watch",
