--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lint-fix": "bunx biome lint --write ./src"
   },
   "dependencies": {
-    "nonchalance": "^0.5.0"
+    "nonchalance": "^0.5.0",
+    "qsa-observer": "^3"
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^14.12.3",
