--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,8 @@
     "files": {
         "ignoreUnknown": false,
         "ignore": [
-            "dist/*.js"
+            "dist/*.js",
+            "*.d.ts"
         ]
     },
     "formatter": {
