don't export .js as it breaks direct import

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "main": "./dist/full.js",
   "exports": {
-    ".": "./dist/full.js",
-    "./*": "./dist/*.js"
+    ".": "./dist/full.js"
   },
   "author": "LeKoala",
   "license": "MIT",
