--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,7 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "baseUrl": "./",
-        "lib": ["es5", "es6", "dom", "dom.iterable"],
+        "lib": ["es2022", "dom", "dom.iterable"],
         "allowJs": true,
         "checkJs": true,
         "noEmit": true,
