--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+    "$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
     "vcs": {
         "enabled": false,
         "clientKind": "git",
@@ -7,9 +7,10 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "ignore": [
-            "dist/*.js",
-            "*.d.ts"
+        "includes": [
+            "**",
+            "!**/dist/**/*.js",
+            "!**/*.d.ts"
         ]
     },
     "formatter": {
@@ -18,8 +19,12 @@
         "indentWidth": 4,
         "lineWidth": 120
     },
-    "organizeImports": {
-        "enabled": true
+    "assist": {
+        "actions": {
+            "source": {
+                "organizeImports": "on"
+            }
+        }
     },
     "linter": {
         "enabled": true,
@@ -27,6 +32,18 @@
             "recommended": true,
             "complexity": {
                 "useOptionalChain": "off"
+            },
+            "style": {
+                "noParameterAssign": "error",
+                "useAsConstAssertion": "error",
+                "useDefaultParameterLast": "error",
+                "useEnumInitializers": "error",
+                "useSelfClosingElements": "error",
+                "useSingleVarDeclarator": "error",
+                "noUnusedTemplateLiteral": "error",
+                "useNumberNamespace": "error",
+                "noInferrableTypes": "error",
+                "noUselessElse": "error"
             }
         }
     },
