--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
+    "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
     "vcs": {
         "enabled": false,
         "clientKind": "git",
@@ -7,11 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": [
-            "**",
-            "!**/dist/**/*.js",
-            "!**/*.d.ts"
-        ]
+        "includes": ["**", "!**/dist/**/*.js", "!**/*.d.ts"]
     },
     "formatter": {
         "enabled": true,
